--- a/vignettes/effect_response_caracoles.Rmd
+++ b/vignettes/effect_response_caracoles.Rmd
@@ -10,7 +10,7 @@ vignette: >
 
 **Introduction**
 
-In this example we calculate per-species competitive responses and effects, as outlined in Godoy et al. (2014), for the plant species included in the associated data. We will also use per-germinant fecundity estimates ($\lambda$) generated independently, as fixed parameters.
+In previous examples we have estimated a series of interactions coefficients between pairs of species. These estimations allow species to be differentiated in their niche and their average fitness (via competitive response differences). However, it is also possible to obtain a metric per species of the average interaction effect to all other species, or their average response when interacting with all other species. This is done by estimating all these coefficients for all species at the same time, and not each species as a time as previous modelling procedures. With this procedure, we do not allow species to be differentiated in their niche (see Godoy, Kraft, and Levine 2014 Ecology Letters 17(7) 836-844 for further details). Again, here is included the plant species in the associated data. Please note that here per-germinant fecundity estimates ($\lambda$) generated independently are used as fixed parameters.
 
 **Set up**
 
@@ -154,7 +154,7 @@ Double-check that we only include species that have proper estimates
 sp.data <- subset(sp.data, focal %in% lambda.values$sp & competitor %in% lambda.values$sp)
 ```
 
-Finally, set initial values for e (competitive effects) and r (competitive responses), as well as their lower and upper bounds. Lower and upper bounds are most likely to be the same for all species, and in that case it is convenient to provide a single value. If we want to specify different values for every species, we can pass vectors of the same length as the lambda, e, and r parameters.
+Finally, set initial values for e (i.e. competitive effects) and r (i.e competitive responses), as well as their lower and upper bounds. Lower and upper bounds are most likely to be the same for all species, and in that case it is convenient to provide a single value. If we want to specify different values for every species, we can pass vectors of the same length as the lambda, e, and r parameters.
 
 ```{r}
 r.values <- rep(1,nrow(lambda.values))
