--- a/vignettes/ParamOptimization_caracoles.Rmd
+++ b/vignettes/ParamOptimization_caracoles.Rmd
@@ -55,9 +55,9 @@ IMPORTANT POINT HERE DO WE NEED TO DESCRIBE THE STRUCTURE OF THESE DIFFERENT MOD
 models <- 3:5
 ```
 
-This sequential procedure means tha the output from model 3 will be taken as initial estimates for model 4, and the output from model 4 will be the initial estimates for model 5. Note, as well, that models 4 and 5 differ from model 3 in that they include the effect of covariates on species seed production in the absence of competition and interactions. Therefore, you should only include these models if you have at least one covariate in your data (see Lanuza, Bartomeus, Godoy 2018, Ecology Letters 21(6) 865-874).
+This sequential procedure means tha the output from model 3 will be taken as initial estimates for model 4, and the output from model 4 will be the initial estimates for model 5. Note, as well, that models 4 and 5 differ from model 3 in that they include the effect of covariates on species seed production in the absence of competition and interactions. Therefore, you should only include these models if you have at least one covariate in your data (see *Lanuza, Bartomeus, Godoy, 2018, Ecology Letters 21:865-874*).
 
-We can estimate the whole parameter set for each model, or fix certain parameters, for example, that would be the case if there are independent field estimation of some of them. This information is passed to the function in a list, in which each element is a string vector giving the set of parameters that are to be optimized for each model. In our example, we optimize all parameters (note that model 3 has only $\lambda$ and $\alpha$ parameters, whereas models 4 and 5 also include the effect of covariates).
+We can estimate the whole parameter set for each model, or fix certain parameters, for example, in case there are independent field estimation of some of them. This information is passed to the function in a list, in which each element is a string vector giving the set of parameters that are to be optimized for each model. In our example, we optimize all parameters (note that model 3 has only $\lambda$ and $\alpha$ parameters, whereas models 4 and 5 also include the effect of covariates).
 
 ```{r}
 # which values do we optimize for each model?
@@ -112,7 +112,7 @@ init.par.method <- optim.methods[1]
 init.method.num <- which(optim.methods == init.par.method)
 ```
 
-We also need to specify the initial values for the first model (model 3, in this example). If you have independent estimates of any parameter, comment out the appropriate lines. Note that some of the optimization methods (e.g. optim-LFGS-B) fail with lower bounds equal to zero. Hence the small, but positive, values.
+We also need to specify the initial values for the first model (model 3, in this example). If you have independent estimates of any parameter, comment out the appropriate lines. Note that some of the optimization methods (e.g. \code{optim-LFGS-B}) fail with lower bounds equal to zero. Hence the small, but positive, values.
 
 ```{r}
 # values for initial estimates of parameters. 
@@ -188,9 +188,9 @@ for(i.sp in 1:length(focal.sp)){
 names(param_estimates) <- focal.sp
 ```
 
-With this procedure, we are now ready to optimize the data set. This is done species by species. As the main function, \code{cxr_optimize}, accepts the input for a single species, we code a loop for going through all species. Inside this loop, we include the following steps:
+With this setting, we are now ready to optimize the selected parameters based on our dataset. This is done species by species. As the main function, \code{cxr_optimize}, accepts the input for a single species, we code a loop for going through all species. Inside this loop, we include the following steps:
 - 1) subset the competition data for the focal species 
-- 2) generate the actual initial values, considering all situations. Remember that, depending on the model, some parameters will have different length. For example, $\alpha$ is a single value in model 2 and a matrix in model 3 onwards. This matrix will not be squared if the number of focal species for which fecundity is predicted is lower than the number of competitors. Thus, for species *i*, $alpha_{ij}$ is a vector of length equal to the number of competitor species.
+- 2) generate the actual initial values, considering all situations. Remember that, depending on the model, some parameters will have different length. For example, $\alpha$ is a single value in model 2 and a matrix in model 3 onwards. Thus, for species *i*, $alpha_{ij}$ is a vector of length equal to the number of competitor species.
 - 3) the actual call to \code{cxr_optimize}
 - 4) store the results in the nested list we created above
 - 5) update the initial values to be passed on to the next model
